Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiggy-app
  namespace: swiggyclone
  labels:
    app: swiggy-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swiggy-app
  template:
    metadata:
      labels:
        app: swiggy-app
    spec:
      containers:
      - name: swiggy-app
        image: kumarsuraj73/swiggy_clone:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
