Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: swiggy-app
  namespace: swiggyclone
  labels:
    app: swiggy-app
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: swiggy-app
